# pilotage

./: .dockerignore  .env.template  .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  git.yml  notify-slack.yml  require-labels.yml
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  test.py
itoutils/: metabase.py
pilotage/: manage.py
pilotage/api/: urls.py  views.py
pilotage/dashboards/: admin.py  apps.py  models.py  urls.py  views.py
pilotage/dashboards/migrations/: 0001_initial.py  0002_dashboard_baseline_dashboard_category_and_more.py  0002_dashboard_new.py  0003_alter_dashboard_description.py  0003_alter_dashboard_new.py  0004_category_dashboard_active_alter_dashboard_category.py  0004_remove_charfield_max_length.py  0005_make_slug_unique.py  0005_remove_dashboard_category_delete_category.py  0006_category_dashboard_category.py  0006_category_display_order_dashboard_embed_url.py  0007_alter_category_title_alter_dashboard_active_and_more.py  (+5 more)
pilotage/fixtures/: dashboard.json  dashboards.json  group.json
pilotage/itoutils/: algorithms.py  apps.py  checks.py  departments.py  forms.py  logging.py  metabase.py  tests.py  validators.py
pilotage/pilotage/: asgi.py  settings.py  urls.py  views.py  wsgi.py
pilotage/surveys/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
pilotage/templates/: 403.html  404.html  500.html
pilotage/users/: apps.py  models.py
pilotage/utils/: context_processors.py
requirements/: base.in  base.txt  dev.in  dev.txt  test.in  test.txt
scripts/: mkchangelog
tests/: conftest.py  test_consistency.py
tests/api/: test_views.py
tests/dashboards/: factories.py  test_views.py
tests/pilotage/: test_views.py
(+77 files in other folders)
