[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# see prefixes in https://docs.astral.sh/ruff/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "UP",  # pyupgrade
    "I",  # isort
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pilotage"]
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.djlint]
profile="django"
ignore="H006,H014,H017,H021,H023,H030,H031,T002,T003"
max_attribute_length=200
max_line_length=1000
preserve_blank_lines=true
no_function_formatting=true
format_css=true
format_js=true
